syntax = "proto3";

package storepb;

option go_package = ".";

service GeoStore {
  rpc StoreData(StoreRequest) returns (StoreResponse);
  rpc GetData(GetRequest) returns (DataResponse);
  rpc FindNearby(NearbyRequest) returns (NearbyResponse);
  rpc HealthStatus(Healthcheck) returns (Healthresponse);
}

message Point{
  double latitude = 1;
  double longitude = 2;
  string deviceId = 3;
  string timeStamp = 4; 
}

message StoreRequest{
 Point point = 1; 
}

message StoreResponse {
  bool status = 1;
}

message GetRequest {
  string deviceId = 1;
}

message DataResponse {
  Point point = 1;
  bool status = 2;
}

message NearbyRequest{
  double latitude = 1; 
  double longitude = 2; 
  int64 radius = 3; 
}

message NearbyResponse{
 repeated Point points = 1; 
 int32 count = 2; 
 bool status =  3; 
}

message Healthcheck{
    bool status = 1;
}

message Healthresponse{
    bool status = 1;
}